Organization of generator ollir and correction of if